tests/error/modules_dep_no_project.vibe
// ERROR: dep. imports require vibe.toml [dep] section
use dep.postgres.connect

fn main() -> i32 {
    return 0
}
